@@ -23,4 +23,5 @@ BIRD_CHEM_COMP_REPO_PATH=MOCK_BIRD_CC_REPO
 CHEM_COMP_REPO_PATH=MOCK_CHEM_COMP_REPO
 PDBX_REPO_PATH=MOCK_PDBX_SANDBOX
 DICT_METHOD_HELPER_MODULE=rcsb.utils.config.ExampleHelper
+ENV_OPTION_A=TEST_ENV_VAR
 #
