@@ -5,7 +5,7 @@
 # -----------------
 #
 [tox]
-envlist = flake8, py{37,36,27}-{linux,macos}, coverage-macos
+envlist = flake8, py{37,27}-{linux,macos}, coverage-macos
 
 #
 skip_missing_interpreters = True
@@ -22,7 +22,6 @@ platform=
 
 basepython =
     py27: python2.7
-    py36: python3.6
     py37: python3.7
 
 whitelist_externals = echo
@@ -40,7 +39,7 @@ commands =
 
 
 [testenv:flake8]
-basepython = python3.6
+basepython = python3.7
 skip_install = true
 deps =
     flake8
@@ -54,7 +53,7 @@ commands =
 # PyLine is working but is not completely configured.
 #
 [testenv:pylint]
-basepython = python3.6
+basepython = python3.7
 skip_install = true
 deps =
     pyflakes
@@ -64,7 +63,7 @@ commands =
 #
 
 [testenv:coverage-macos]
-basepython = python3.6
+basepython = python3.7
 platform=macos: darwin
 #skip_install = true
 
